# Tennisball

./: .gitignore  CMakeLists.txt  Makefile  README.md  StillImageTesting.cpp  install_models.sh  live_video.cpp  still_image.py  tennisball.cpp  todo.org  utils.hpp
data/: test.tfrecord
data/final_models/: graph.pbtxt
data/testing/: test.tfrecord  testing.csv  testing_shuffled.csv
data/training/: train.tfrecord  training.csv  training_shuffled.csv
scripts/: generate_tfrecords.py  install_models.sh  make_tfrecords.sh  run_training.sh
src/: detector.cpp  detector.hpp  live_video.cpp  still_image.cpp
training/: pipeline.config  pipeline_config.config
